@@ -1,3 +1,2 @@
 js/slick.colorbox.min.js
 js/slick.load.min.js
-js/slick.media.min.js
