@@ -19,9 +19,16 @@ class SlickFormatter extends BlazyFormatterManager implements SlickFormatterInte
    * {@inheritdoc}
    */
   public function buildSettings(array &$build = [], $items) {
+    $settings = &$build['settings'];
+    
+    // Prepare integration with Blazy.
+    $settings['item_id']                  = 'slide';
+    $settings['namespace']                = 'slide';
+    $settings['theme_hook_image']         = 'slick_image';
+    $settings['theme_hook_image_wrapper'] = 'slick_media';
+    
     parent::buildSettings($build, $items);
 
-    $settings                   = &$build['settings'];
     $optionset_name             = $settings['optionset'] ?: 'default';
     $build['optionset']         = Slick::load($optionset_name);
     $settings['nav']            = !empty($settings['optionset_thumbnail']) && isset($items[1]);
@@ -29,12 +36,6 @@ class SlickFormatter extends BlazyFormatterManager implements SlickFormatterInte
     $settings['blazy']          = $settings['lazy'] == 'blazy' || !empty($settings['blazy']);
     $settings['lazy']           = $settings['blazy'] ? 'blazy' : $settings['lazy'];
     $settings['lazy_attribute'] = $settings['blazy'] ? 'src' : 'lazy';
-
-    // Prepare integration with Blazy.
-    $settings['item_id']                  = 'slide';
-    $settings['namespace']                = 'slick';
-    $settings['theme_hook_image']         = 'slick_image';
-    $settings['theme_hook_image_wrapper'] = 'slick_media';
   }
 
   /**
